<resources>
    <string name="app_name">Chat</string>
    <string name="title_activity_load">来信</string>
    <string name="autologin">自动登录</string>
    <string name="rememberuser">记住用户名</string>
    <string name="regtext">注册</string>
    <string name="logintext">登录</string>
    <string name="search">搜索</string>

    <string name="menu_me">今日热点</string>
    <string name="menu_dis">导航</string>
    <string name="menu_addressbook">搜索好友</string>
    <string name="menu_chat">聊天</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
