<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:background="@drawable/black"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:layout_marginRight="0dp">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logintop" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/title_activity_load"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:layout_marginRight="0dp">



        <EditText
            android:id="@+id/txtusername"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"

            android:hint="QQ/邮箱/手机号"
            android:paddingLeft="8dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="20dp">



        <EditText
            android:id="@+id/txtpassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"

            android:hint="密码"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            tools:elevation="0dp" />
    </LinearLayout>


    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:background="@drawable/login_button_select"
        android:text="@string/logintext"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/chkautologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:text="@string/autologin" />

        <CheckBox
            android:id="@+id/chkremember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:text="@string/rememberuser" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="0dp" >

        <Button
            android:id="@+id/button2"
            android:layout_width="75dp"
            android:layout_height="52dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="312dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/login_button_select"
            android:padding="5dp"
            android:paddingTop="5dp"
            android:text="@string/regtext" />

    </RelativeLayout>

</LinearLayout>
