<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:gravity="center"
    android:background="@color/bg_line_light_gray">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/id_tab_wechat"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/id_tab_wechat_img"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/bg_line_light_gray"
            android:clickable="false"
            android:elevation="0dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/chat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/menu_chat"
            android:textColor="#000000" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/id_tab_friend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/id_tab_friend_img"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/bg_line_light_gray"
            android:clickable="false"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/addressbook"
            tools:background="@color/bg_line_light_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/menu_addressbook"
            android:textColor="#000000" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/id_tab_dis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/id_tab_dis_img"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/bg_line_light_gray"
            android:clickable="false"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/dis" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/menu_dis"
            android:textColor="#000000" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/id_tab_me"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/id_tab_me_img"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:adjustViewBounds="false"
            android:background="@color/bg_line_light_gray"
            android:baselineAlignBottom="false"
            android:clickable="false"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/me" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/menu_me"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>
